Changed dependency injection for easier testing